--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,6 +24,12 @@
 				<input class="form-control" type="password" name="password" value="123" placeholder="密码" id="password">
 			</div>
 		</div>
+		<div class="form-group">
+			<label class="control-label">记住我</label>
+			<div>
+				<input class="form-control" type="checkbox" name="rememberMe" value="true">
+			</div>
+		</div>
 
 		<div class="form-actions">
 			<button class="btn blue" id="login" type="submit">登录</button>	
@@ -62,7 +68,8 @@
 					url:"http://localhost:8080/user/login",
 					data:{
 						"username":username,
-						"password":password
+						"password":password,
+						"rememberMe":true
 					},
 					xhrFields:{withCredentials:true},  //跨域信任
 					success:function(data){
